Logging Added AOP logging, configured log4j2 to send logs to a centralized location, added implementation of HttpServletRequest that enables reading from it multiple times.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=rideshare-admin-service
 # Actuator settings
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
@@ -10,3 +9,4 @@ spring.datasource.password=rideshare
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=rideshare
+spring.aop.auto=true
